--- a/website/static/style.css
+++ b/website/static/style.css
@@ -894,6 +894,18 @@ video {
 
 /* Ici pour ajouter des classes */
 
+.p-about {
+  line-height: 1.25rem;
+  margin-top: 1rem;
+  text-align: justify
+}
+
+@media (min-width: 768px) {
+  .p-about {
+    width: 50%;
+  }
+}
+
 :root {
   --blue-900: #f7fafc;
   --blue-800: #e2f2f7;
@@ -911,29 +923,10 @@ a {
   color: var(--orange);
 }
 
-.title--about {
-  font-size: 2rem;
-  color: var(--orange);
-  font-weight: bold;
-}
-
 .section__title--about {
   font-size: 1.5rem;
   margin-top: 1.5rem;
   font-weight: bold;
-}
-
-.p--about {
-  margin-top: 1rem;
-  width: 50%;
-  text-align: justify;
-  line-height: 1.25rem;
-}
-
-.icon {
-  display: inline;
-  height: 1em;
-  padding: 0 0.25em;
 }
 
 .text-huge {
